refactor(i18n): 重构国际化系统并迁移语言文件目录
将国际化系统从 `locales` 目录迁移到 `language` 目录，优化语言文件加载逻辑
新增主题系统，实现预设主题管理和颜色配置功能
修复远程语言文件加载路径问题

--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -372,15 +372,6 @@
       "fill": "Rellenar",
       "auto": "Automático"
     },
-    "color_options": {
-      "default": "Por defecto",
-      "midnight": "Medianoche",
-      "forest": "Bosque",
-      "sunset": "Atardecer",
-      "ocean": "Océano",
-      "rose": "Rosa",
-      "custom": "Personalizado"
-    },
     "edit_colorplan_options": {
       "light": "Claro",
       "dark": "Oscuro",
@@ -456,7 +447,10 @@
     "developer_mode": "Modo desarrollador",
     "developer_mode_desc": "Activar funciones avanzadas y depuración",
     "developer_mode_toggle": "Activar modo desarrollador",
-    "developer_mode_toggle_desc": "Al activarlo, se habilitan herramientas de depuración"
+    "developer_mode_toggle_desc": "Al activarlo, se habilitan herramientas de depuración",
+    "color_options": {
+      "custom": "Personalizado"
+    }
   },
   "about": {
     "title": "Acerca de",
