--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -392,15 +392,6 @@
       "fill": "Étirer",
       "auto": "Taille d'origine"
     },
-    "color_options": {
-      "default": "Défaut",
-      "midnight": "Minuit",
-      "forest": "Forêt",
-      "sunset": "Coucher de soleil",
-      "ocean": "Océan",
-      "rose": "Rose",
-      "custom": "Personnalisé"
-    },
     "edit_colorplan_options": {
       "light": "Clair",
       "dark": "Sombre",
@@ -476,7 +467,10 @@
     "developer_mode": "Mode développeur",
     "developer_mode_desc": "Activer les fonctionnalités avancées et les options de débogage",
     "developer_mode_toggle": "Activer le mode développeur",
-    "developer_mode_toggle_desc": "Permet d'utiliser les outils de débogage"
+    "developer_mode_toggle_desc": "Permet d'utiliser les outils de débogage",
+    "color_options": {
+      "custom": "Personnalisé"
+    }
   },
   "about": {
     "title": "À propos",
