--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -387,15 +387,6 @@
       "fill": "Растянуть",
       "auto": "Авто"
     },
-    "color_options": {
-      "default": "По умолч.",
-      "midnight": "Полночь",
-      "forest": "Лес",
-      "sunset": "Закат",
-      "ocean": "Океан",
-      "rose": "Роза",
-      "custom": "Своя"
-    },
     "edit_colorplan_options": {
       "light": "Светлая",
       "dark": "Темная",
@@ -471,7 +462,10 @@
     "developer_mode": "Режим разработчика",
     "developer_mode_desc": "Расширенные функции и отладка",
     "developer_mode_toggle": "Включить",
-    "developer_mode_toggle_desc": "Включить расширенные возможности"
+    "developer_mode_toggle_desc": "Включить расширенные возможности",
+    "color_options": {
+      "custom": "Пользовательский"
+    }
   },
   "about": {
     "title": "О программе",
