--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -22,7 +22,7 @@
     "collapse_btn": "Collapse Sidebar"
   },
   "header": {
-    "language": "Language",
+    "language": "Idioma",
     "chinese": "简体中文",
     "english": "English",
     "chinese_tw": "繁體中文",
