--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -22,7 +22,7 @@
     "collapse_btn": "Collapse Sidebar"
   },
   "header": {
-    "language": "Language",
+    "language": "言語",
     "chinese": "简体中文",
     "english": "English",
     "chinese_tw": "繁體中文",
