--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -25,7 +25,10 @@
     "language": "语言",
     "chinese": "简体中文",
     "english": "English",
-    "chinese_tw": "繁體中文"
+    "chinese_tw": "繁體中文",
+    "japanese": "日本語",
+    "korean": "한국어",
+    "spanish": "Español"
   },
   "home": {
     "title": "服务器管理",
@@ -425,4 +428,3 @@
     "quit": "退出"
   }
 }
-
