feat(i18n): 添加多语言header翻译并移除未使用的语言代码
添加了header部分的多语言翻译，支持简体中文、繁体中文、英语、德语、西班牙语、日语、俄语、越南语、韩语和法语
移除未使用的语言代码和对应的翻译项，简化i18n配置

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -1,5 +1,17 @@
 {
   "languageName": "Deutsch",
+  "header": {
+    "chinese": "Vereinfachtes Chinesisch",
+    "english": "Englisch",
+    "chinese_tw": "Traditionelles Chinesisch",
+    "deutsch": "Deutsch",
+    "spanish": "Spanisch",
+    "japanese": "Japanisch",
+    "russian": "Russisch",
+    "vietnamese": "Vietnamesisch",
+    "korean": "Koreanisch",
+    "french": "Französisch"
+  },
   "common": {
     "app_name": "Sea Lantern",
     "home": "Startseite",
