--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -11,7 +11,8 @@
     "about": "關於",
     "loading": "載入中...",
     "select_server": "選擇伺服器",
-    "open_folder": "開啟資料夾"
+    "open_folder": "開啟資料夾",
+    "mods": "模組下載"
   },
   "sidebar": {
     "groups": {
@@ -25,7 +26,10 @@
     "language": "語言",
     "chinese": "简体中文",
     "english": "English",
-    "chinese_tw": "繁體中文"
+    "chinese_tw": "繁體中文",
+    "japanese": "日本語",
+    "korean": "한국어",
+    "spanish": "Español"
   },
   "home": {
     "title": "伺服器管理",
@@ -428,5 +432,29 @@
     "minimize": "最小化到後台",
     "show": "顯示",
     "quit": "退出"
+  },
+  "mods": {
+    "title": "模組市場（第一期）",
+    "subtitle": "基於 Modrinth 搜尋並安裝到目前伺服器的 mods 目錄",
+    "keyword": "關鍵字",
+    "keyword_placeholder": "例如：sodium",
+    "game_version": "遊戲版本",
+    "loader": "載入器",
+    "search": "搜尋模組",
+    "install": "安裝",
+    "target_server": "目標伺服器",
+    "select_server_first": "請先在側邊欄選擇一個伺服器",
+    "enter_keyword": "請輸入要搜尋的模組關鍵字",
+    "no_summary": "暫無簡介",
+    "empty_hint": "輸入關鍵字後點擊「搜尋模組」",
+    "install_success": "已安裝：{{name}}",
+    "downloads": "下載：",
+    "prev_page": "上一頁",
+    "next_page": "下一頁",
+    "result_range": "顯示 {{start}}-{{end}} / 共 {{total}} 筆",
+    "install_with_dependencies_success": "已安裝（含前置）：{{name}}",
+    "project_type": "類型",
+    "project_type_mod": "模組",
+    "project_type_plugin": "插件（Paper）"
   }
 }
