--- a/docs/项目结构.md
+++ b/docs/项目结构.md
@@ -87,6 +87,21 @@ sea-lantern/
 │   ├── data/                          # 静态数据
 │   │   └── contributors.ts           # 贡献者信息列表
 │   │
+│   ├── language/                     # 语言相关逻辑 
+│   │  ├── README.md                      # 语言文件说明
+│   │  ├── README-en.md                   # 英文语言文件说明
+│   │  ├── de-DE.json                     # 德语翻译
+│   │  ├── en-US.json                     # 英语翻译
+│   │  ├── es-ES.json                     # 西班牙语翻译
+│   │  ├── fr-FA.json                     # 法语翻译
+│   │  ├── ja-JP.json                     # 日语翻译
+│   │  ├── ko-KR.json                     # 韩语翻译
+│   │  ├── ru-RU.json                     # 俄语翻译
+│   │  ├── vi-VN.json                     # 越南语翻译
+│   │  ├── zh-CN.json                     # 简体中文翻译
+│   │  └── zh-TW.json                     # 繁体中文翻译
+
+│   │
 │   ├── locales/                       # 国际化资源
 │   │   └── index.ts                   # 语言文件入口
 │   │
@@ -213,20 +228,6 @@ sea-lantern/
 │   ├── Cargo.toml                     # Rust 依赖配置
 │   ├── build.rs                       # 构建脚本
 │   └── tauri.conf.json                # Tauri 配置（窗口大小、标题、版本等）
-│
-├── lang/                              # 语言文件
-│   ├── README.md                      # 语言文件说明
-│   ├── README-en.md                   # 英文语言文件说明
-│   ├── de-DE.json                     # 德语翻译
-│   ├── en-US.json                     # 英语翻译
-│   ├── es-ES.json                     # 西班牙语翻译
-│   ├── fr-FA.json                     # 法语翻译
-│   ├── ja-JP.json                     # 日语翻译
-│   ├── ko-KR.json                     # 韩语翻译
-│   ├── ru-RU.json                     # 俄语翻译
-│   ├── vi-VN.json                     # 越南语翻译
-│   ├── zh-CN.json                     # 简体中文翻译
-│   └── zh-TW.json                     # 繁体中文翻译
 │
 ├── docs/                              # 文档
 │   ├── AI_GUIDE.md                    # AI 使用指南
