feat: 插件和插件市场

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -685,14 +685,14 @@
       "api_desc": "Allows the plugin to communicate with other plugins.",
       "ui": "UI Injection",
       "ui_desc": "Allows the plugin to inject custom HTML elements into the interface.",
-      "ui.component.read": "UI Component Read",
-      "ui.component.read_desc": "Allows reading UI component properties, lists, and event listeners",
-      "ui.component.write": "UI Component Write",
-      "ui.component.write_desc": "Allows modifying UI component properties and calling methods",
-      "ui.component.proxy": "UI Component Proxy",
-      "ui.component.proxy_desc": "Allows intercepting and modifying UI component interaction events, can block original behavior, user confirmation required",
-      "ui.component.create": "Create UI Components",
-      "ui.component.create_desc": "Allows the plugin to dynamically create new UI components and render them in the app.",
+      "ui_component_read": "UI Component Read",
+      "ui_component_read_desc": "Allows reading UI component properties, lists, and event listeners",
+      "ui_component_write": "UI Component Write",
+      "ui_component_write_desc": "Allows modifying UI component properties and calling methods",
+      "ui_component_proxy": "UI Component Proxy",
+      "ui_component_proxy_desc": "Allows intercepting and modifying UI component interaction events, can block original behavior, user confirmation required",
+      "ui_component_create": "Create UI Components",
+      "ui_component_create_desc": "Allows the plugin to dynamically create new UI components and render them in the app.",
       "execute_program": "Execute Program",
       "execute_program_desc": "Allows the plugin to run executable programs within its directory. This is an extremely dangerous permission, malicious plugins may use it to execute arbitrary code.",
       "plugin_folder_access": "Plugin Folder Access",
@@ -704,7 +704,17 @@
       "danger_critical": "Critical",
       "danger_dangerous": "Dangerous",
       "danger_normal": "Normal",
-      "critical_warning": "This plugin requests extremely dangerous permissions that may seriously affect your system. Please ensure you trust the source of this plugin."
+      "critical_warning": "This plugin requests extremely dangerous permissions that may seriously affect your system. Please ensure you trust the source of this plugin.",
+      "panel_btn_title": "View permission info",
+      "panel_btn_text": "Permissions",
+      "panel_title": "Permission Info",
+      "panel_declared": "Declared Permissions",
+      "panel_no_permissions": "No declared permissions",
+      "panel_command_log": "Command Execution Log",
+      "panel_no_commands": "No command records",
+      "panel_api_stats": "API Call Statistics",
+      "panel_no_api_calls": "No API calls",
+      "panel_call_count": "{count} calls"
     }
   },
   "market": {
