--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -681,14 +681,14 @@
       "api_desc": "允许插件与其他插件进行通信。",
       "ui": "界面注入",
       "ui_desc": "允许插件注入自定义 HTML 元素到界面中。",
-      "ui.component.read": "UI 组件读取",
-      "ui.component.read_desc": "允许读取页面内已注册的 UI 组件属性、列表及监听事件",
-      "ui.component.write": "UI 组件写入",
-      "ui.component.write_desc": "允许修改页面内已注册的 UI 组件属性并调用其方法",
-      "ui.component.proxy": "UI 组件代理",
-      "ui.component.proxy_desc": "允许拦截并修改 UI 组件的交互事件，可阻断原始行为，需用户确认",
-      "ui.component.create": "创建 UI 组件",
-      "ui.component.create_desc": "允许插件动态创建新的 UI 组件并渲染到应用中。",
+      "ui_component_read": "UI 组件读取",
+      "ui_component_read_desc": "允许读取页面内已注册的 UI 组件属性、列表及监听事件",
+      "ui_component_write": "UI 组件写入",
+      "ui_component_write_desc": "允许修改页面内已注册的 UI 组件属性并调用其方法",
+      "ui_component_proxy": "UI 组件代理",
+      "ui_component_proxy_desc": "允许拦截并修改 UI 组件的交互事件，可阻断原始行为，需用户确认",
+      "ui_component_create": "创建 UI 组件",
+      "ui_component_create_desc": "允许插件动态创建新的 UI 组件并渲染到应用中。",
       "execute_program": "执行程序",
       "execute_program_desc": "允许插件运行其目录内的可执行程序。这是极度危险的权限，恶意插件可能利用此权限执行任意代码。",
       "plugin_folder_access": "插件文件夹访问",
@@ -700,7 +700,17 @@
       "danger_critical": "极度危险",
       "danger_dangerous": "危险",
       "danger_normal": "普通",
-      "critical_warning": "此插件请求了极度危险的权限，可能对您的系统造成严重影响。请确保您信任此插件的来源。"
+      "critical_warning": "此插件请求了极度危险的权限，可能对您的系统造成严重影响。请确保您信任此插件的来源。",
+      "panel_btn_title": "查看权限信息",
+      "panel_btn_text": "权限",
+      "panel_title": "权限信息",
+      "panel_declared": "声明的权限",
+      "panel_no_permissions": "无声明权限",
+      "panel_command_log": "命令执行记录",
+      "panel_no_commands": "暂无命令记录",
+      "panel_api_stats": "API 调用统计",
+      "panel_no_api_calls": "暂无 API 调用",
+      "panel_call_count": "{count} 次"
     }
   },
   "market": {
