--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -420,7 +420,7 @@
     "import": "Import",
     "java_download": "Download Java",
     "java_download_desc": "If Java is not installed or you need an updated version, you can download it here",
-    "java_download_btn": "Download Java 17 (LTS)",
+    "java_download_btn": "Download Java {{version}} (LTS)",
     "reset": "Restore Defaults",
     "import_settings": "Import Settings",
     "import_desc": "Paste previously exported JSON data",
@@ -441,9 +441,6 @@
     "reset_title": "Confirm Restore Defaults",
     "browse_java": "Browse for java.exe",
     "browse_jar": "Browse for .jar file",
-    "java_download": "Auto Install Java",
-    "java_download_desc": "Download and configure JDK environment from Adoptium",
-    "java_download_btn": "One-click Install",
     "java_version_select": "Select Version",
     "java_installing": "Downloading...",
     "java_install_success": "Installation Complete: ",
