补充了对应键值的翻译

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -207,6 +207,23 @@
     "loading": "Lade Konfiguration...",
     "no_config": "Keine Konfigurationsdatei gefunden. Bitte starte den Server einmal, um server.properties zu generieren",
     "saved": "Konfiguration gespeichert",
+    "server_properties": "Server-Eigenschaften",
+    "server_plugins": "Server-Plugins",
+    "loading_plugins": "Lade Plugins...",
+    "no_plugins": "Keine Plugins gefunden",
+    "author": "Autor",
+    "enable": "Aktivieren",
+    "disable": "Deaktivieren",
+    "delete": "Löschen",
+    "refresh_list": "Liste aktualisieren",
+    "reload_plugins": "Plugins neu laden",
+    "empty_config_folder": "Konfigurationsordner ist leer",
+    "no_config_files": "Keine Konfiguration",
+    "config_files_count": "Konfigurationen",
+    "config_files": "Konfigurationsdateien",
+    "open": "Öffnen",
+    "confirm_delete_plugin": "Möchtest du das Plugin {name} wirklich löschen?",
+    "not_jar_file": "{file} ist keine JAR-Datei, kann nicht aktiviert/deaktiviert werden",
     "categories": {
       "all": "Alle",
       "network": "Netzwerk",
