--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -211,6 +211,23 @@
     "loading": "Loading config...",
     "no_config": "No config file found. Please start the server once to generate server.properties",
     "saved": "Config saved",
+    "server_properties": "Server Properties",
+    "server_plugins": "Server Plugins",
+    "loading_plugins": "Loading plugins...",
+    "no_plugins": "No plugins found",
+    "author": "Author",
+    "enable": "Enable",
+    "disable": "Disable",
+    "delete": "Delete",
+    "refresh_list": "Refresh List",
+    "reload_plugins": "Reload Plugins",
+    "empty_config_folder": "Config folder is empty",
+    "no_config_files": "No config",
+    "config_files_count": "configs",
+    "config_files": "Config Files",
+    "open": "Open",
+    "confirm_delete_plugin": "Are you sure you want to delete plugin {name}?",
+    "not_jar_file": "{file} is not a jar file, cannot enable/disable",
     "categories": {
       "all": "All",
       "network": "Network",
