--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -207,6 +207,23 @@
     "loading": "Cargando configuración...",
     "no_config": "No se encontró configuración. Inicia el servidor una vez para generar server.properties",
     "saved": "Configuración guardada",
+    "server_properties": "Propiedades del servidor",
+    "server_plugins": "Plugins del servidor",
+    "loading_plugins": "Cargando plugins...",
+    "no_plugins": "No se encontraron plugins",
+    "author": "Autor",
+    "enable": "Activar",
+    "disable": "Desactivar",
+    "delete": "Eliminar",
+    "refresh_list": "Actualizar lista",
+    "reload_plugins": "Recargar plugins",
+    "empty_config_folder": "Carpeta de configuración vacía",
+    "no_config_files": "Sin configuración",
+    "config_files_count": "configuraciones",
+    "config_files": "Archivos de configuración",
+    "open": "Abrir",
+    "confirm_delete_plugin": "¿Estás seguro de que quieres eliminar el plugin {name}?",
+    "not_jar_file": "{file} no es un archivo JAR, no se puede activar/desactivar",
     "categories": {
       "all": "Todo",
       "network": "Red",
