--- a/src/language/ja-JP.json
+++ b/src/language/ja-JP.json
@@ -207,6 +207,23 @@
     "loading": "設定を読み込み中...",
     "no_config": "設定ファイルが見つかりません。一度サーバーを起動して server.properties を生成してください",
     "saved": "設定を保存しました",
+    "server_properties": "サーバープロパティ",
+    "server_plugins": "サーバープラグイン",
+    "loading_plugins": "プラグインを読み込み中...",
+    "no_plugins": "プラグインが見つかりません",
+    "author": "作者",
+    "enable": "有効化",
+    "disable": "無効化",
+    "delete": "削除",
+    "refresh_list": "リストを更新",
+    "reload_plugins": "プラグインを再読み込み",
+    "empty_config_folder": "設定フォルダが空です",
+    "no_config_files": "設定なし",
+    "config_files_count": "個の設定",
+    "config_files": "設定ファイル",
+    "open": "開く",
+    "confirm_delete_plugin": "プラグイン {name} を削除してもよろしいですか？",
+    "not_jar_file": "{file} は JAR ファイルではないため、有効化/無効化できません",
     "categories": {
       "all": "すべて",
       "network": "ネットワーク",
