--- a/src/language/ko-KR.json
+++ b/src/language/ko-KR.json
@@ -210,6 +210,23 @@
     "loading": "설정 로딩 중...",
     "no_config": "설정 파일을 찾을 수 없습니다. 서버를 한 번 실행하여 server.properties 파일을 생성해주세요",
     "saved": "설정이 저장되었습니다",
+    "server_properties": "서버 속성",
+    "server_plugins": "서버 플러그인",
+    "loading_plugins": "플러그인 로딩 중...",
+    "no_plugins": "플러그인을 찾을 수 없습니다",
+    "author": "작성자",
+    "enable": "활성화",
+    "disable": "비활성화",
+    "delete": "삭제",
+    "refresh_list": "목록 새로고침",
+    "reload_plugins": "플러그인 다시 로드",
+    "empty_config_folder": "설정 폴더가 비어 있습니다",
+    "no_config_files": "설정 없음",
+    "config_files_count": "개 설정",
+    "config_files": "설정 파일",
+    "open": "열기",
+    "confirm_delete_plugin": "플러그인 {name}을 삭제하시겠습니까?",
+    "not_jar_file": "{file}은 JAR 파일이 아니므로 활성화/비활성화할 수 없습니다",
     "categories": {
       "all": "전체",
       "network": "네트워크",
