--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -207,6 +207,23 @@
     "loading": "Загрузка настроек...",
     "no_config": "Файл конфигурации не найден. Запустите сервер один раз для создания server.properties",
     "saved": "Конфигурация сохранена",
+    "server_properties": "Свойства сервера",
+    "server_plugins": "Плагины сервера",
+    "loading_plugins": "Загрузка плагинов...",
+    "no_plugins": "Плагины не найдены",
+    "author": "Автор",
+    "enable": "Включить",
+    "disable": "Отключить",
+    "delete": "Удалить",
+    "refresh_list": "Обновить список",
+    "reload_plugins": "Перезагрузить плагины",
+    "empty_config_folder": "Папка конфигурации пуста",
+    "no_config_files": "Нет конфигурации",
+    "config_files_count": "конфигураций",
+    "config_files": "Файлы конфигурации",
+    "open": "Открыть",
+    "confirm_delete_plugin": "Вы уверены, что хотите удалить плагин {name}?",
+    "not_jar_file": "{file} не является JAR файлом, не может быть включен/отключен",
     "categories": {
       "all": "Все",
       "network": "Сеть",
