--- a/src/language/zh-TW.json
+++ b/src/language/zh-TW.json
@@ -207,6 +207,23 @@
     "loading": "載入設定中...",
     "no_config": "沒有找到設定檔，請先啟動一次伺服器以產生 server.properties",
     "saved": "設定已儲存",
+    "server_properties": "伺服器屬性",
+    "server_plugins": "伺服器外掛",
+    "loading_plugins": "載入外掛中...",
+    "no_plugins": "沒有找到外掛",
+    "author": "作者",
+    "enable": "啟用",
+    "disable": "禁用",
+    "delete": "刪除",
+    "refresh_list": "刷新列表",
+    "reload_plugins": "重新載入外掛",
+    "empty_config_folder": "配置資料夾為空",
+    "no_config_files": "無配置",
+    "config_files_count": "個配置",
+    "config_files": "配置檔案",
+    "open": "開啟",
+    "confirm_delete_plugin": "確定要刪除外掛 {name} 嗎？",
+    "not_jar_file": "{file} 不是 jar 檔案，無法啟用/禁用",
     "categories": {
       "all": "全部",
       "network": "網路",
