--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -210,6 +210,23 @@
     "loading": "Chargement de la configuration...",
     "no_config": "Aucun fichier de configuration trouvé, démarrez le serveur une fois pour générer server.properties",
     "saved": "Configuration enregistrée",
+    "server_properties": "Propriétés du serveur",
+    "server_plugins": "Plugins du serveur",
+    "loading_plugins": "Chargement des plugins...",
+    "no_plugins": "Aucun plugin trouvé",
+    "author": "Auteur",
+    "enable": "Activer",
+    "disable": "Désactiver",
+    "delete": "Supprimer",
+    "refresh_list": "Rafraîchir la liste",
+    "reload_plugins": "Recharger les plugins",
+    "empty_config_folder": "Dossier de configuration vide",
+    "no_config_files": "Aucune configuration",
+    "config_files_count": "configurations",
+    "config_files": "Fichiers de configuration",
+    "open": "Ouvrir",
+    "confirm_delete_plugin": "Êtes-vous sûr de vouloir supprimer le plugin {name}?",
+    "not_jar_file": "{file} n'est pas un fichier JAR, impossible de l'activer/désactiver",
     "categories": {
       "all": "Tous",
       "network": "Réseau",
