--- a/src/language/vi-VN.json
+++ b/src/language/vi-VN.json
@@ -207,6 +207,23 @@
     "loading": "Đang tải cấu hình...",
     "no_config": "Không tìm thấy tệp cấu hình. Hãy khởi động máy chủ một lần để tạo server.properties",
     "saved": "Đã lưu cấu hình",
+    "server_properties": "Thuộc tính máy chủ",
+    "server_plugins": "Trình bổ sung máy chủ",
+    "loading_plugins": "Đang tải trình bổ sung...",
+    "no_plugins": "Không tìm thấy trình bổ sung",
+    "author": "Tác giả",
+    "enable": "Kích hoạt",
+    "disable": "Vô hiệu hóa",
+    "delete": "Xóa",
+    "refresh_list": "Làm mới danh sách",
+    "reload_plugins": "Tải lại trình bổ sung",
+    "empty_config_folder": "Thư mục cấu hình trống",
+    "no_config_files": "Không có cấu hình",
+    "config_files_count": "cấu hình",
+    "config_files": "Tệp cấu hình",
+    "open": "Mở",
+    "confirm_delete_plugin": "Bạn có chắc chắn muốn xóa trình bổ sung {name} không?",
+    "not_jar_file": "{file} không phải là tệp JAR, không thể kích hoạt/vô hiệu hóa",
     "categories": {
       "all": "Tất cả",
       "network": "Mạng",
