--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -62,11 +62,6 @@
     "background_size_fill": "拉伸 (Fill)",
     "background_size_auto": "原始大小 (Auto)",
     "color_default": "默认",
-    "color_custom": "自定义",
-    "edit_color_light": "浅色",
-    "edit_color_dark": "深色",
-    "edit_color_light_acrylic": "浅色毛玻璃",
-    "edit_color_dark_acrylic": "深色毛玻璃",
     "theme_auto": "跟随系统",
     "theme_light": "浅色",
     "theme_dark": "深色",
@@ -450,25 +445,6 @@
     "color_theme": "颜色主题",
     "color_theme_desc": "自定义软件颜色主题",
     "theme_proxied_by": "由 {plugin} 插件代理",
-    "use_preset_colortheme": "使用预设",
-    "use_preset_colortheme_desc": "选择预设的颜色主题，或自定义颜色",
-    "color_editing": "颜色编辑",
-    "color_editing_desc": "设置自定义的颜色值",
-    "current_edit_colorplan": "当前编辑方案",
-    "current_edit_colorplan_desc": "选择当前编辑的颜色方案",
-    "color_plan": "颜色方案",
-    "color_plan_desc": "选择要编辑的颜色方案",
-    "primary_background_color": "主背景色",
-    "secondary_background_color": "次背景色",
-    "tertiary_background_color": "第三背景色",
-    "primary_color": "主强调色",
-    "secondary_color": "次强调色",
-    "text_primary_color": "主文字色",
-    "text_secondary_color": "次文字色",
-    "primary_text_color": "主文字色",
-    "secondary_text_color": "次文字色",
-    "border_color": "边框颜色",
-    "color_value": "颜色值",
     "search_font": "搜索字体",
     "loading_preview": "加载预览中...",
     "animated_image": "动图",
@@ -477,19 +453,10 @@
     "replace_image": "更换图片",
     "personalize_page_import_export": "请前往“设置”页面进行导入/导出操作。",
     "font_family_default": "系统默认",
-    "color_picker": "颜色选择器",
-    "input_color_placeholder": "输入颜色值",
-    "color_hue": "色相",
-    "color_saturation": "饱和度",
-    "color_lightness": "亮度",
-    "color_alpha": "透明度",
     "developer_mode": "开发者模式",
     "developer_mode_desc": "启动高级功能和调试选项",
     "developer_mode_toggle": "启动开发者模式",
-    "developer_mode_toggle_desc": "启用后将允许使用调试工具",
-    "color_options": {
-      "custom": "自定义"
-    }
+    "developer_mode_toggle_desc": "启用后将允许使用调试工具"
   },
   "about": {
     "title": "关于",
