--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -212,6 +212,23 @@
     "loading": "加载配置中...",
     "no_config": "没有找到配置文件，请先启动一次服务器以生成 server.properties",
     "saved": "配置已保存",
+    "server_properties": "服务器属性",
+    "server_plugins": "服务器插件",
+    "loading_plugins": "加载插件中...",
+    "no_plugins": "没有找到插件",
+    "author": "作者",
+    "enable": "启用",
+    "disable": "禁用",
+    "delete": "删除",
+    "refresh_list": "刷新列表",
+    "reload_plugins": "重载插件",
+    "empty_config_folder": "配置文件夹为空",
+    "no_config_files": "无配置",
+    "config_files_count": "个配置",
+    "config_files": "配置文件",
+    "open": "打开",
+    "confirm_delete_plugin": "确定要删除插件 {name} 吗？",
+    "not_jar_file": "{file} 不是 jar 文件，无法启用/禁用",
     "categories": {
       "all": "全部",
       "network": "网络",
