feat(i18n): 添加多语言翻译并更新相关组件
添加常见操作的国际化翻译，包括进度、最小化、最大化、关闭等
更新SLProgress、SLConfirmDialog等组件以使用国际化文本
修改AppHeader和AppSidebar组件中的硬编码文本为国际化引用

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -98,7 +98,18 @@
     "config_performance": "Leistung",
     "config_display": "Anzeige",
     "config_other": "Sonstiges",
-    "config_saved": "Konfiguration gespeichert"
+    "config_saved": "Konfiguration gespeichert",
+    "refresh": "Aktualisieren",
+    "save": "Speichern",
+    "plugins": "Plugins",
+    "market": "Plugin-Markt",
+    "progress": "Fortschritt",
+    "minimize": "Minimieren",
+    "maximize": "Maximieren",
+    "close": "Schließen",
+    "confirm_action": "Aktion bestätigen",
+    "confirm": "Bestätigen",
+    "cancel": "Abbrechen"
   },
   "sidebar": {
     "groups": {
