--- a/src/language/zh-TW.json
+++ b/src/language/zh-TW.json
@@ -98,7 +98,18 @@
     "config_performance": "效能",
     "config_display": "顯示",
     "config_other": "其他",
-    "config_saved": "設定已儲存"
+    "config_saved": "設定已儲存",
+    "refresh": "重新整理",
+    "save": "儲存",
+    "plugins": "外掛",
+    "market": "外掛市場",
+    "progress": "進度",
+    "minimize": "最小化",
+    "maximize": "最大化",
+    "close": "關閉",
+    "confirm_action": "確認操作",
+    "confirm": "確認",
+    "cancel": "取消"
   },
   "sidebar": {
     "groups": {
