feat(窗口管理): 添加窗口还原功能并优化最大化状态管理
添加窗口还原功能，当窗口最大化时显示还原按钮。新增窗口大小变化监听以实时更新最大化状态。同时添加了对应的国际化文本"还原"。

--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -101,6 +101,7 @@
     "progress": "进度",
     "minimize": "最小化",
     "maximize": "最大化",
+    "restore": "还原",
     "close": "关闭",
     "confirm_action": "确认操作",
     "confirm": "确认",
