--- a/src/language/ko-KR.json
+++ b/src/language/ko-KR.json
@@ -159,6 +159,7 @@
     "jar_file": "서버 JAR 파일",
     "bat_file": "서버 BAT 파일",
     "sh_file": "서버 SH 파일",
+    "ps1_file": "서버 PS1 파일",
     "select_startup_file": "서버 {{mode}} 파일을 선택하세요",
     "browse": "찾아보기",
     "scan": "스캔",
